--- a/TDD-tools/TDD-tools.csproj
+++ b/TDD-tools/TDD-tools.csproj
@@ -30,6 +30,14 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentAssertions, Version=3.3.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentAssertions.3.3.0\lib\net45\FluentAssertions.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="FluentAssertions.Core, Version=3.3.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentAssertions.3.3.0\lib\net45\FluentAssertions.Core.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Moq, Version=4.2.1502.911, Culture=neutral, PublicKeyToken=69f491c39445e920, processorArchitecture=MSIL">
       <HintPath>..\packages\Moq.4.2.1502.0911\lib\net40\Moq.dll</HintPath>
       <Private>True</Private>
@@ -50,6 +58,8 @@
   <ItemGroup>
     <Compile Include="Account.cs" />
     <Compile Include="AccountWriter.cs" />
+    <Compile Include="FluentAssertions_01.cs" />
+    <Compile Include="FluentAssertions_02.cs" />
     <Compile Include="IAccountData.cs" />
     <Compile Include="IFileWriter.cs" />
     <Compile Include="Moq_01.cs" />
